AgriculturePresentation/wwwroot/web/css/style.css
/* ... */
@media(max-width:384px){
	.readmore-w3 a {
		padding: 1px 12px;
	}
	.callbacks_nav {
		width: 19px;
		height: 19px;
		background-size: 39px;
	}
	p.para-w3-agileits {
		line-height: 27px;
	}
	p.heading-btm-w3ls {
		line-height: 20px;
		margin: .2em 0em 2em;
	}
	.tab1, .tab2 {
		padding: 1em .5em 1em;
	}
	.wthree_team_grid {
		width: 76%;
	}
	.blog-info-w3layouts h6 a {
		line-height: 25px;
	}
	.navbar-toggle {
		margin: .7em 9.5em 0 0;
	}
	.navbar-nav > li > a {
		padding: 9px 6px 0;
	}
	.navbar-nav {
		padding-bottom: 1em;
		padding-top: .7em;
	}
	.pictures_eyes_in img {
		max-height: 253px;
	}
	.about, .sevices-w3layouts, .gallery, .team, .blog, .contact-agile {
		padding: 55px 0px;
	}
	.slider-info h3 {
		width: 77%;
	}
	.services-main {
		width: 71%;
	}
}
@media(max-width:375px){
	.navbar-toggle {
		margin: .7em 9.1em 0 0;
	}
	.services-main {
		width: 75%;
	}
	.wthree_team_grid {
		width: 80%;
	}
	.slider-info h3 {
		width: 79%;
	}
	.slider-info {
		margin-top: 3.2em;
	}
	.callbacks_tabs {
		left: 34%;
		top: 106%;
	}
}
@media(max-width:320px){
	.w3l_header_left ul li {
		margin-left: .6em;
	}
	.w3l_header_right {
		margin: 4px 0px 0px 9px;
	}
	.logo h1 {
		font-size: 1.2em;
		margin-left: 0.45em;
	}
	.navbar-toggle {
		margin: .7em 9.5em 0 0;
	}
	.cd-header-buttons {
		top: -39px;
		right: -2px;
	}
	.navbar-toggle {
		margin: .7em 7.4em 0 0;
	}
	.slider-info h3 {
		width: 95%;
	}
	.callbacks_nav {
		width: 17px;
		height: 17px;
		background-size: 34px;
	}
	.slider-info {
		margin-left: 1.5em;
	}
	.resp-tabs-container {
		width: 100%;
	}
	.modal-header {
		padding: 20px;
	}
	.services-main {
		width: 87%;
	}
	.wthree_team_grid {
		width: 98%;
	}
	a.bar::after {
		left: -10%;
	}
	a.mid-bar::after {
		right: -9.5%;
	}
	h3.tittle {
		font-size: 20px;
	}
	.pictures_eyes_in img {
		max-height: 217px;
	}
	.p-mask h4 {
		font-size: 1.03em;
	}
	.blog-info-w3layouts h6 a {
		font-size: 15px;
	}
	.contact-left p {
		font-size: 13px;
	}
	.contact-agile h4, .contact-agile h2 {
		font-size: 18px;
	}
	.contact-middle input[type="text"], .contact-middle input[type="email"], textarea {
		padding: 6px 15px;
	}
	.copy p {
		padding: 1em 1.3em;
	}
	.w3l_header_left ul li {
		font-size: 13.4px;
	}
	.callbacks_tabs {
		left: 32%;
		top: 106%;
	}
	.modal-content h5 {
		font-size: 14px;
	}
	.modal-content p {
		font-size: 13.4px;
	}
}
/*--responsive--*/

